Updated spacing and media queries, fixed footer and contact form

--- a/style.css
+++ b/style.css
@@ -76,15 +76,24 @@ body {
     background-color: #2687cb;
 }
 
+.solar-bg {
+    background-image: url(assets/images/solar_clouds_bg.jpg);
+}
+
 .bullet-text {
     color: #fcde34;
     align-items: center;
     font-size: 20px;
 }
 
+.contact-form-h4 {
+    color: #fcde34;
+}
+
 .footer-p {
     color: white;
     display: inline-block;
+    font-size: smaller;
 }
 
 .btn-submit {
@@ -97,13 +106,15 @@ body {
 
 /* Media Queries */
 
-@media (min-width:1200px) {
+/* Extra large - 993px and above */
+@media (min-width:993px) {
 
     .header-text {
         font-size: 15px;
 
 }
 
+/* Large - Less than 992px */
 @media  (max-width: 992px) {
     .top-header {
         background-color: #2687cb;
@@ -120,6 +131,7 @@ body {
     }
 }
 
+/* Medium - Less than 768px */
 @media (max-width: 768px) {
     .top-header {
         background-color: #2687cb;
@@ -137,6 +149,7 @@ body {
         font-size: 15px;
 }
 
+/* Small - Less than 576px */
 @media (max-width: 576px) {
     .top-header {
         background-color: #2687cb;
